[gd_scene load_steps=2 format=3 uid="uid://pause_menu"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
process_mode = 3
script = ExtResource("1_pause")

[node name="Panel" type="Panel" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -70.0
offset_right = 80.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PausedLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="MainMenuButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Panel/VBoxContainer/ResumeButton" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitButton" to="." method="_on_quit_pressed"]
